--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -265,7 +265,7 @@
                 android:text="@string/bandpass_voice_filter"
                 android:textSize="16sp" />
 
-            <Switch
+            <androidx.appcompat.widget.SwitchCompat
                 android:id="@+id/switchVoiceFilter"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
@@ -319,7 +319,7 @@
                 android:textSize="16sp"
                 tools:ignore="HardcodedText" />
 
-            <Switch
+            <androidx.appcompat.widget.SwitchCompat
                 android:id="@+id/switchSkipSilence"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
@@ -353,7 +353,7 @@
                 tools:ignore="HardcodedText"
                 android:textSize="16sp" />
 
-            <Switch
+            <androidx.appcompat.widget.SwitchCompat
                 android:id="@+id/switchNotificationsEnabled"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
@@ -480,7 +480,7 @@
                 android:textSize="16sp"
                 tools:ignore="HardcodedText" />
 
-            <Switch
+            <androidx.appcompat.widget.SwitchCompat
                 android:id="@+id/switchEncodingOnTheFly"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
@@ -526,7 +526,7 @@
                 android:textSize="16sp"
                 tools:ignore="HardcodedText" />
 
-            <Switch
+            <androidx.appcompat.widget.SwitchCompat
                 android:id="@+id/switchSilentMode"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
@@ -549,7 +549,7 @@
                 android:textSize="16sp"
                 tools:ignore="HardcodedText" />
 
-            <Switch
+            <androidx.appcompat.widget.SwitchCompat
                 android:id="@+id/switchLockscreenControls"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
